link and headers added

--- a/text.html
+++ b/text.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Заголовок страницы</title>
+        <title>Название нашего сайта</title>
     </head>
     <body>
+        <h1>Зголовок над нашим текстом</h1>
         <p>текст текст текст текст текст текст текст текст</p>
+        <a href="#header">Link text</a>
     </body>
 </html>
 <!-- some code -->
