added meta charset and data to script

--- a/text.html
+++ b/text.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Название нашего сайта</title>
+        <meta charset="UTF-8">
     </head>
     <body>
         <h1>Зголовок над нашим текстом</h1>
